# SDIZO-Project

./: .gitignore  BinaryHeap.cpp  BinaryHeap.h  CMakeLists.txt  DoubleList.cpp  README.md  RedBlackTree.cpp  RedBlackTree.h  Report.html  Report.md  Report2.html  array.cpp  array.h  double_list.cpp  double_list.h  heap_input.txt  main.cpp  notatki.md  single_list.cpp  test_input.txt
SDiZO-Project_1/: README.md  Report.md  Report2.html
SDiZO-Project_1/extra/: AVLTree_text.txt  RBTree_test.txt  array_test.txt  auto_input.txt  data.txt  data_generator.py  heap_test.txt  list_test.txt
SDiZO-Project_1/src/: AVLTree.cpp  AVLTree.h  Array.cpp  Array.h  AutomatedTest.cpp  AutomatedTest.h  BinaryHeap.cpp  BinaryHeap.h  DoubleList.cpp  DoubleList.h  Essentials.cpp  Essentials.h  (+5 more)
SDiZO-Projekt_2/: CMakeLists.txt  README.md  Report.md
SDiZO-Projekt_2/extra/: automated.txt  graphs.py
SDiZO-Projekt_2/extra/results/: BellmanFord.txt  Dijkstra.txt  Kruskal.txt  Prim.txt
SDiZO-Projekt_2/src/: AutomatedTests.cpp  AutomatedTests.h  BellmanFord.cpp  BellmanFord.h  Dijkstra.cpp  Dijkstra.h  Essentials.cpp  Essentials.h  FordFulkerson.cpp  FordFulkerson.h  Kruskal.cpp  Kruskal.h  List.cpp  List.h  ManualTests.cpp  ManualTests.h  Matrix.cpp  Matrix.h  Prim.cpp  Prim.h  main.cpp
extra/: data_generator.py  graph_and_measurments.py  test_borders.txt  test_input.txt
src/: AVLTree.cpp  AVLTree.h  Array.cpp  AutomatedTest.cpp  AutomatedTest.h  BinaryHeap.cpp  BinaryHeap.h  DoubleList.cpp  DoubleList.h  Essentials.h  ManualTest.cpp  RedBlackTree.cpp  RedBlackTree.h  array.h  main.cpp
(+5 files in other folders)
